# fin_cal

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
docs/: CNAME  index.html  tailwind.css
docs/assets/dioxus/: fin_cal.js  fin_cal_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
src/: main.rs
src/components/: fancy_button.rs  input_number.rs  story_listing.rs
