[package]
name = "fin_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.78"
log = "0.4.14"
console_error_panic_hook = "*"
im-rc = "15.0.0"